hphp/hack/test/typecheck/typehole/T76155254.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

<<__ConsistentConstruct>>
class Hgoldstein {}

abstract class HgoldsteinChild extends Hgoldstein {}

final class HgoldsteinGrandChild extends HgoldsteinChild {}

function make_hgoldstein(classname<Hgoldstein> $cls): void {
  $_ = new $cls();
}

<<__EntryPoint>>
function hgoldstein_main(): void {
  make_hgoldstein(HgoldsteinChild::class);
}
